kubernetes/example_project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: default
  labels:
    app: hello-node
spec:
  type: NodePort
  selector:
    app: hello-node
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
