kubernetes/example_project/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-node
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 3
  template:
    metadata:
      labels:
        k8s-app: hello-node
        name: hello-node
    spec:
      hostname: hello-node
      subdomain: hello-node
      hostNetwork: true
      containers:
      - name: hello-node
        image: jonatasfreitasv/hello-node
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
          hostPort: 5000
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "1"]
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 3
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 3
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: default
spec:
  selector:
    k8s-app: hello-node
  ports:
  - name: web
    port: 5000
    targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-node
  namespace: default
spec:
  rules:
  - host: hello.node
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-node
          servicePort: web
